--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript{
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.2"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31"
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21'
 
         // NOTE: Do not placer your application dependences here: they belong
         // in the individuak module build.gradle files
