--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript{
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.2"
+        classpath 'com.android.tools.build:gradle:7.2.0'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21'
 
         // NOTE: Do not placer your application dependences here: they belong
@@ -13,6 +13,8 @@ buildscript{
 
         // Regarding firbase
         classpath 'com.google.gms:google-services:4.3.10'
+        //noinspection GradleDependency
+        classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.4.2'
     }
 }
 task clean(type: Delete) {
